Fix theme icon visibility based on theme

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -315,7 +315,7 @@ body {
   --code-block-bg-light: rgb(28, 29, 33);
   --code-bg-light: rgb(240, 240, 240);
   --border-light: rgb(230, 230, 230);
-  --home-title-light: rgb(55, 55, 54);
+  --home-title-light: rgb(7, 5, 131);
   --theme-dark: rgb(77, 77, 78);
   --entry-dark: rgb(46, 46, 51);
   --primary-dark: rgb(218, 218, 219);
